--- a/wiki/cs/Compile_on_Linux.html
+++ b/wiki/cs/Compile_on_Linux.html
@@ -1307,10 +1307,10 @@ make<span class="w"> </span>-j<span class="k">$(</span>nproc<span class="k">)</s
         <div class="NavContent mw-collapsible-content" style="margin: 10px; border: 1px solid var(--border-color-base, #aaaaaa); text-align: left; border-collapse: collapse; font-weight: normal; font-size: 100%; clear:both; margin-top: 1px; background-color: var(--background-color-neutral-subtle, #fefefe);">
 <ul><li><b><a href="../cs/Getting_started.html" title="Getting started/cs">Getting started</a></b></li>
 <li><b>Installation:</b> <a href="../cs/Download.html" title="Download/cs">Download</a>, <a href="../cs/Installing_on_Windows.html" title="Installing on Windows/cs">Windows</a>, <a href="../cs/Installing_on_Linux.html" title="Installing on Linux/cs">Linux</a>, <a href="../cs/Installing_on_Mac.html" title="Installing on Mac/cs">Mac</a>, <a href="../cs/Installing_additional_components.html" title="Installing additional components/cs">Additional components</a>, <a href="../index.php?title=Compile_on_Docker/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Compile on Docker/cs (page does not exist)">Docker</a>, <a href="../index.php?title=AppImage/cs&amp;action=edit&amp;redlink=1.html" class="new" title="AppImage/cs (page does not exist)">AppImage</a>, <a href="../index.php?title=Ubuntu_Snap/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Ubuntu Snap/cs (page does not exist)">Ubuntu Snap</a></li>
-<li><b>Basics:</b> <a href="../cs/About_FreeCAD.html" title="About FreeCAD/cs">About FreeCAD</a>, <a href="../index.php?title=Interface/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Interface/cs (page does not exist)">Interface</a>, <a href="../cs/Mouse_navigation.html" title="Mouse navigation/cs">Mouse navigation</a>, <a href="../index.php?title=Selection_methods/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Selection methods/cs (page does not exist)">Selection methods</a>, <a href="../index.php?title=Object_name/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Object name/cs (page does not exist)">Object name</a>, <a href="../cs/Preferences_Editor.html" title="Preferences Editor/cs">Preferences</a>, <a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>, <a href="../cs/Document_structure.html" title="Document structure/cs">Document structure</a>, <a href="../cs/Property.html" title="Property/cs">Properties</a>, <a href="../cs/Help_FreeCAD.html" title="Help FreeCAD/cs">Help FreeCAD</a>, <a href="../index.php?title=Donate/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Donate/cs (page does not exist)">Donate</a></li></ul>
+<li><b>Basics:</b> <a href="../cs/About_FreeCAD.html" title="About FreeCAD/cs">About FreeCAD</a>, <a href="../index.php?title=Interface/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Interface/cs (page does not exist)">Interface</a>, <a href="../cs/Mouse_navigation.html" title="Mouse navigation/cs">Mouse navigation</a>, <a href="../cs/Selection_methods.html" title="Selection methods/cs">Selection methods</a>, <a href="../index.php?title=Object_name/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Object name/cs (page does not exist)">Object name</a>, <a href="../cs/Preferences_Editor.html" title="Preferences Editor/cs">Preferences</a>, <a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>, <a href="../cs/Document_structure.html" title="Document structure/cs">Document structure</a>, <a href="../cs/Property.html" title="Property/cs">Properties</a>, <a href="../cs/Help_FreeCAD.html" title="Help FreeCAD/cs">Help FreeCAD</a>, <a href="../index.php?title=Donate/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Donate/cs (page does not exist)">Donate</a></li></ul>
 <hr>
 <ul><li><b>Help:</b> <a href="../cs/Tutorials.html" title="Tutorials/cs">Tutorials</a>, <a href="../cs/Video_tutorials.html" title="Video tutorials/cs">Video tutorials</a></li>
-<li><b><a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>:</b> <a href="../index.php?title=Std_Base/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std Base/cs (page does not exist)">Std Base</a>, <a href="../index.php?title=Assembly_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Assembly Workbench/cs (page does not exist)">Assembly</a>, <a href="../index.php?title=BIM_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Workbench/cs (page does not exist)">BIM</a>, <a href="../cs/CAM_Workbench.html" title="CAM Workbench/cs">CAM</a>, <a href="../cs/Draft_Workbench.html" title="Draft Workbench/cs">Draft</a>, <a href="../cs/FEM_Workbench.html" title="FEM Workbench/cs">FEM</a>, <a href="../cs/Inspection_Workbench.html" title="Inspection Workbench/cs">Inspection</a>, <a href="../index.php?title=Material_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Material Workbench/cs (page does not exist)">Material</a>, <a href="../cs/Mesh_Workbench.html" title="Mesh Workbench/cs">Mesh</a>, <a href="../cs/OpenSCAD_Workbench.html" title="OpenSCAD Workbench/cs">OpenSCAD</a>, <a href="../cs/Part_Workbench.html" title="Part Workbench/cs">Part</a>, <a href="../cs/PartDesign_Workbench.html" title="PartDesign Workbench/cs">PartDesign</a>, <a href="../cs/Points_Workbench.html" title="Points Workbench/cs">Points</a>, <a href="../cs/Reverse_Engineering_Workbench.html" title="Reverse Engineering Workbench/cs">Reverse Engineering</a>, <a href="../cs/Robot_Workbench.html" title="Robot Workbench/cs">Robot</a>, <a href="../cs/Sketcher_Workbench.html" title="Sketcher Workbench/cs">Sketcher</a>, <a href="../cs/Spreadsheet_Workbench.html" title="Spreadsheet Workbench/cs">Spreadsheet</a>, <a href="../cs/Surface_Workbench.html" title="Surface Workbench/cs">Surface</a>, <a href="../cs/TechDraw_Workbench.html" title="TechDraw Workbench/cs">TechDraw</a>, <a href="../index.php?title=Testing/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Testing/cs (page does not exist)">Test Framework</a></li></ul>
+<li><b><a href="../cs/Workbenches.html" title="Workbenches/cs">Workbenches</a>:</b> <a href="../cs/Std_Base.html" title="Std Base/cs">Std Base</a>, <a href="../index.php?title=Assembly_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Assembly Workbench/cs (page does not exist)">Assembly</a>, <a href="../index.php?title=BIM_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Workbench/cs (page does not exist)">BIM</a>, <a href="../cs/CAM_Workbench.html" title="CAM Workbench/cs">CAM</a>, <a href="../cs/Draft_Workbench.html" title="Draft Workbench/cs">Draft</a>, <a href="../cs/FEM_Workbench.html" title="FEM Workbench/cs">FEM</a>, <a href="../cs/Inspection_Workbench.html" title="Inspection Workbench/cs">Inspection</a>, <a href="../cs/Material_Workbench.html" title="Material Workbench/cs">Material</a>, <a href="../cs/Mesh_Workbench.html" title="Mesh Workbench/cs">Mesh</a>, <a href="../cs/OpenSCAD_Workbench.html" title="OpenSCAD Workbench/cs">OpenSCAD</a>, <a href="../cs/Part_Workbench.html" title="Part Workbench/cs">Part</a>, <a href="../cs/PartDesign_Workbench.html" title="PartDesign Workbench/cs">PartDesign</a>, <a href="../cs/Points_Workbench.html" title="Points Workbench/cs">Points</a>, <a href="../cs/Reverse_Engineering_Workbench.html" title="Reverse Engineering Workbench/cs">Reverse Engineering</a>, <a href="../cs/Robot_Workbench.html" title="Robot Workbench/cs">Robot</a>, <a href="../cs/Sketcher_Workbench.html" title="Sketcher Workbench/cs">Sketcher</a>, <a href="../cs/Spreadsheet_Workbench.html" title="Spreadsheet Workbench/cs">Spreadsheet</a>, <a href="../cs/Surface_Workbench.html" title="Surface Workbench/cs">Surface</a>, <a href="../cs/TechDraw_Workbench.html" title="TechDraw Workbench/cs">TechDraw</a>, <a href="../index.php?title=Testing/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Testing/cs (page does not exist)">Test Framework</a></li></ul>
 <hr>
 <ul><li><b><a href="../index.php?title=Addon/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Addon/cs (page does not exist)">Addons</a>:</b> <a href="../index.php?title=Std_AddonMgr/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Std AddonMgr/cs (page does not exist)">Addon Manager</a>, <a href="../index.php?title=External_workbenches/cs&amp;action=edit&amp;redlink=1.html" class="new" title="External workbenches/cs (page does not exist)">External workbenches</a>, <a href="../cs/Scripting_and_macros.html" title="Scripting and macros/cs">Scripting and macros</a></li></ul>
 <hr>
@@ -1318,12 +1318,12 @@ make<span class="w"> </span>-j<span class="k">$(</span>nproc<span class="k">)</s
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260101214309
+Cached time: 20260112000834
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.205 seconds
-Real time usage: 0.338 seconds
+CPU time usage: 0.204 seconds
+Real time usage: 0.254 seconds
 Preprocessor visited node count: 3190/1000000
 Post&#8208;expand include size: 23016/2097152 bytes
 Template argument size: 17090/2097152 bytes
@@ -1334,19 +1334,19 @@ Unstrip post&#8208;expand size: 44681/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  134.929      1 -total
- 23.06%   31.120     52 Template:Code
- 16.72%   22.565    304 Template:Incode
- 10.75%   14.509      1 Template:Userdocnavi/cs
-  4.55%    6.144      5 Template:Button
-  4.46%    6.016      2 Template:VeryImportantMessage
-  3.57%    4.820      6 Template:MenuCommand
-  3.40%    4.585      3 Template:FileName
-  2.71%    3.651      1 Template:Navigation_menu_2
-  2.16%    2.915      1 Template:TOCright
+100.00%   69.024      1 -total
+ 23.48%   16.206     52 Template:Code
+ 16.96%   11.707    304 Template:Incode
+  8.85%    6.108      1 Template:Userdocnavi/cs
+  4.28%    2.951      1 Template:Navigation_menu_2
+  4.20%    2.896      2 Template:Docnav
+  3.13%    2.158      2 Template:VeryImportantMessage
+  2.91%    2.010      6 Template:MenuCommand
+  2.63%    1.814      3 Template:FileName
+  2.38%    1.645      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:200243-0!canonical and timestamp 20260101214309 and revision id 1725390. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:200243-0!canonical and timestamp 20260112000834 and revision id 1725390. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
