--- a/wiki/cs/Manual;Introduction.html
+++ b/wiki/cs/Manual;Introduction.html
@@ -24,9 +24,9 @@
 <li><a href="../ko/Manual;Introduction.html" class="mw-pt-progress mw-pt-progress--complete" title="&#47588;&#45684;&#50620;:&#49548;&#44060; (100% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Freecad.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="48" data-file-height="48"></span></span></div>
-    <div><a href="../Manual;What_is_FreeCAD.html" title="Manual:What is FreeCAD">Manual:Co je FreeCAD</a>
+    <div><a href="../index.php?title=Manual;What_is_FreeCAD/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Manual:What is FreeCAD/cs (page does not exist)">Manual:Co je FreeCAD</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-    <div><a href="../Manual;Introduction.html" title="Manual:Introduction">Manual start</a>
+    <div><a class="mw-selflink selflink">Manual start</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Crystal_Clear_manual.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="128" data-file-height="128"></span></span></div>
 </div>
 <div id="toc" class="manualtoc" style="float:right; margin:10px 0px 10px 10px;">
@@ -93,15 +93,15 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260111080936
+Cached time: 20260112012051
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.069 seconds
-Real time usage: 0.123 seconds
+CPU time usage: 0.063 seconds
+Real time usage: 0.156 seconds
 Preprocessor visited node count: 63/1000000
-Post&#8208;expand include size: 7796/2097152 bytes
-Template argument size: 444/2097152 bytes
+Post&#8208;expand include size: 7814/2097152 bytes
+Template argument size: 456/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -109,13 +109,13 @@ Unstrip post&#8208;expand size: 4355/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.384      1 -total
- 73.04%   10.506      1 Template:Manual:TOC
- 47.39%    6.816      1 Manual:Summary/cs
- 22.86%    3.288      2 Template:Docnav
+100.00%   13.732      1 -total
+ 77.39%   10.627      1 Template:Manual:TOC
+ 51.66%    7.094      1 Manual:Summary/cs
+ 20.08%    2.758      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410069-0!canonical and timestamp 20260111080936 and revision id 1732288. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410069-0!canonical and timestamp 20260112012050 and revision id 1736834. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
