--- a/wiki/cs/Manual;Introduction.html
+++ b/wiki/cs/Manual;Introduction.html
@@ -86,22 +86,22 @@
 </p>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Freecad.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="48" data-file-height="48"></span></span></div>
-    <div><a href="../Manual;What_is_FreeCAD.html" title="Manual:What is FreeCAD">Manual:What is FreeCAD</a>
+    <div><a href="../index.php?title=Manual;What_is_FreeCAD/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Manual:What is FreeCAD/cs (page does not exist)">Manual:Co je FreeCAD</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-    <div><a href="../Manual;Introduction.html" title="Manual:Introduction">Manual start</a>
+    <div><a class="mw-selflink selflink">Manual start</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Crystal_Clear_manual.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="128" data-file-height="128"></span></span></div>
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112012051
+Cached time: 20260112012105
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.063 seconds
-Real time usage: 0.156 seconds
+CPU time usage: 0.084 seconds
+Real time usage: 0.120 seconds
 Preprocessor visited node count: 63/1000000
-Post&#8208;expand include size: 7814/2097152 bytes
-Template argument size: 456/2097152 bytes
+Post&#8208;expand include size: 7826/2097152 bytes
+Template argument size: 464/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -109,13 +109,13 @@ Unstrip post&#8208;expand size: 4355/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.732      1 -total
- 77.39%   10.627      1 Template:Manual:TOC
- 51.66%    7.094      1 Manual:Summary/cs
- 20.08%    2.758      2 Template:Docnav
+100.00%    8.363      1 -total
+ 68.06%    5.692      1 Template:Manual:TOC
+ 52.70%    4.407      1 Manual:Summary/cs
+ 27.87%    2.331      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410069-0!canonical and timestamp 20260112012050 and revision id 1736834. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410069-0!canonical and timestamp 20260112012105 and revision id 1736836. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
