--- a/wiki/cs/Manual;Introduction.html
+++ b/wiki/cs/Manual;Introduction.html
@@ -78,7 +78,7 @@
 <li><a href="../Manual;Creating_parametric_objects.html" title="Manual:Creating parametric objects">Creating parametric objects</a></li>
 <li><a href="../Manual;Creating_interface_tools.html" title="Manual:Creating interface tools">Creating interface tools</a></li></ul></li>
 <li><a href="../Manual;The_Community.html" title="Manual:The Community">The community</a></li></ul></div>
-<p><a rel="nofollow" class="external text" href="https://www.freecad.org">FreeCAD</a> is an open-source, free parametric 3D computer-aided design (CAD) modelling tool used to create objects ranging from simple designs to complex projects consisting of extensive assemblies of numerous parts. Due to its open-source nature, FreeCAD can be freely downloaded, distributed, modified, and used for both personal and commercial purposes. The source code is openly published under the <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/GNU_Lesser_General_Public_License">LGPL</a> license. This makes FreeCAD an appealing option not only for relatively inexperienced users, such as hobbyists in the 3D printing world, but also for experienced users looking to experiment with a different parametric tool.
+<p><a rel="nofollow" class="external text" href="https://www.freecad.org">FreeCAD</a> je otev&#345;en&yacute;, bezplatn&yacute; parametrick&yacute; n&aacute;stroj pro 3D po&#269;&iacute;ta&#269;ov&eacute; navrhov&aacute;n&iacute; (CAD) pou&#382;&iacute;van&yacute; k vytv&aacute;&#345;en&iacute; objekt&#367; od jednoduch&yacute;ch n&aacute;vrh&#367; a&#382; po slo&#382;it&eacute; projekty sest&aacute;vaj&iacute;c&iacute; z rozs&aacute;hl&yacute;ch sestav mnoha d&iacute;l&#367;. D&iacute;ky sv&eacute; otev&#345;en&eacute; povaze lze FreeCAD voln&#283; stahovat, distribuovat, upravovat a pou&#382;&iacute;vat pro osobn&iacute; i komer&#269;n&iacute; &uacute;&#269;ely. Zdrojov&yacute; k&oacute;d je ve&#345;ejn&#283; publikov&aacute;n pod licenc&iacute; <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/GNU_Lesser_General_Public_License">LGPL</a>. D&iacute;ky tomu je FreeCAD atraktivn&iacute; volbou nejen pro relativn&#283; nezku&scaron;en&eacute; u&#382;ivatele, jako jsou nap&#345;&iacute;klad hobbyist&eacute; ve sv&#283;t&#283; 3D tisku, ale tak&eacute; pro zku&scaron;en&eacute; u&#382;ivatele, kte&#345;&iacute; cht&#283;j&iacute; vyzkou&scaron;et jin&yacute; parametrick&yacute; n&aacute;stroj.
 </p><p>The software was initially released in its infancy in 2002. Since then, thanks to the continuous contributions from a devoted community of developers and users, FreeCAD has grown slowly but steadily. The passionate efforts of numerous contributors have not only improved FreeCAD's capabilities as a CAD tool but have also led to the development of additional functionalities in separate domains closely tied to the base FreeCAD suite. Some notable examples include the FEM workbench, which enables the execution of simple Finite Element Analysis, as well as the BIM workbench which offers Building Information Modeling (BIM) capabilities.
 </p><p>This user manual is being written and updated for version <a href="../Release_notes_1.0.html" title="Release notes 1.0">1.0</a> of FreeCAD. Its purpose is to serve as a guide for individuals who wish to start using FreeCAD for their projects. No extensive prior knowledge of any CAD software is required, and the contents of this manual are organized in a straightforward and comprehensive manner, divided into various application areas. The guide includes instructions regarding the installation of FreeCAD, the use of its most prominent workbenches, and extends to more complex topics such as Python scripting. Efforts have been made to present the information in an organized, step-by-step fashion, complete with images. This structure ensures that both novice CAD users and more experienced individuals can benefit from studying this manual. The contents of this manual are published under the <a rel="nofollow" class="external text" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons 4.0</a> license, and can be freely used, downloaded, copied, and modified. The FreeCAD Manual is continuously improved through user experiences and contributions. A <a rel="nofollow" class="external text" href="https://wiki.freecad.org/FreeCAD_manual_converter">Python script</a> is available to convert the latest version of this manual into PDF or EPUB formats for offline reading. 
 </p><p>Another valuable resource is the <a href="../Main_Page.html" title="Main Page">FreeCAD wiki</a>, where numerous contributors have added useful information covering every aspect of the software. Due to the wealth of information available, navigating and using the wiki can be somewhat challenging and overwhelming, especially for new users. For this reason, it is advised to first study the user manual, which offers a more streamlined and smooth introduction, before delving into the more extensive details available in the wiki. Finally, the <a rel="nofollow" class="external text" href="https://forum.freecad.org/">FreeCAD Forums</a> are also very helpful and provide additional support and insights.
@@ -93,12 +93,12 @@
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260112012105
+Cached time: 20260112012235
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.084 seconds
-Real time usage: 0.120 seconds
+CPU time usage: 0.063 seconds
+Real time usage: 0.109 seconds
 Preprocessor visited node count: 63/1000000
 Post&#8208;expand include size: 7826/2097152 bytes
 Template argument size: 464/2097152 bytes
@@ -109,13 +109,13 @@ Unstrip post&#8208;expand size: 4355/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.363      1 -total
- 68.06%    5.692      1 Template:Manual:TOC
- 52.70%    4.407      1 Manual:Summary/cs
- 27.87%    2.331      2 Template:Docnav
+100.00%    8.409      1 -total
+ 73.09%    6.146      1 Template:Manual:TOC
+ 59.39%    4.994      1 Manual:Summary/cs
+ 23.52%    1.978      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410069-0!canonical and timestamp 20260112012105 and revision id 1736836. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410069-0!canonical and timestamp 20260112012235 and revision id 1736838. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
